--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="action_voice_rec">action voice rec</string>
     <string name="action_location">action location</string>
     <string name="action_taxi">action taxi</string>
-    <string name="action_restaurant">action restaurant</string>
+    <string name="action_change_colors">change style</string>
 </resources>
